src/components/ResearchPaperSection/ResearchPaperSection.css
.ResearchPaperSection {
  display: block;
  margin-bottom: 2rem;
  clear: both;
  overflow: auto;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
}

.ResearchPaperSection__thumbnail {
  position: relative;
  float: left;
  width: 125px;
  height: 125px;
  margin-right: 12px;
}

.ResearchPaperSection__url {
  color: #3498db;
  text-decoration: underline;
}

.no-touch .ResearchPaperSection__url:hover {
  font-weight: normal;
}

